フォント読み込みの修正

--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -116,7 +116,7 @@ import "../styles/global.css";
     align-items: center;
   }
   li {
-    font-family: "Jost";
+    font-family: "jost", sans-serif;
     font-weight: 500;
     transform: translateY(-0.5rem);
   }
@@ -127,7 +127,7 @@ import "../styles/global.css";
     color: #fff;
   }
   h1 {
-    width: 10rem;
+    width: 12.8vw;
   }
   h1 svg {
   }
