--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,18 +1,21 @@
 @font-face {
-  font-family: "Jost";
-  src: url("/fonts/Jost-VariableFont_wght.ttf") format("ttf");
-  font-weight: normal;
-  font-style: normal;
+  font-family: "jost";
+  src: url("/sunshine-solutions/fonts/Jost-Medium.ttf") format("truetype");
+  font-weight: 500;
   font-display: swap;
 }
 @font-face {
-  font-family: "CormorantGaramond-Bold";
-  src: url("/fonts/CormorantGaramond-Bold.ttf") format("ttf");
+  font-family: "cormorant garamond";
+  src: url("/sunshine-solutions/fonts/CormorantGaramond-Medium.ttf")
+    format("truetype");
+  font-weight: 500;
   font-display: swap;
 }
 @font-face {
-  font-family: "CormorantGaramond-Medium";
-  src: url("/fonts/CormorantGaramond-Medium.ttf") format("ttf");
+  font-family: "cormorant garamond";
+  src: url("/sunshine-solutions/fonts/CormorantGaramond-Bold.ttf")
+    format("truetype");
+  font-weight: 700;
   font-display: swap;
 }
 
@@ -22,9 +25,8 @@
   list-style: none;
   box-sizing: border-box;
   text-decoration: none;
-  font-weight: normal;
 }
-a:link {
+/* a:link {
   color: #000;
 }
 
@@ -38,4 +40,4 @@ a:hover {
 
 a:active {
   color: #000;
-}
+} */
