--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -2,7 +2,7 @@
 import "../styles/global.css";
 ---
 
-<nav>
+<header id="header">
   <a href="#top">
     <h1>
       <svg
@@ -96,10 +96,10 @@ import "../styles/global.css";
     <li><a href="#solutions">Our solutions</a></li>
     <li><a href="#history">Our history</a></li>
   </ul>
-</nav>
+</header>
 
 <style>
-  nav {
+  header {
     width: calc(100% - 5rem);
     position: fixed;
     top: 2.5rem;
@@ -108,6 +108,14 @@ import "../styles/global.css";
     gap: 1rem;
     grid-template-columns: repeat(8, minmax(max-content, 1fr));
     z-index: 100;
+    color: #fff;
+    padding: 0.1rem 1rem;
+    border-radius: 0.5rem;
+    transition: background-color 0.5s;
+  }
+  header.background {
+    backdrop-filter: blur(2.4rem);
+    background-color: hsla(0, 0%, 0%, 0.1);
   }
   ul {
     display: grid;
@@ -118,16 +126,16 @@ import "../styles/global.css";
   li {
     font-family: "jost", sans-serif;
     font-weight: 500;
-    transform: translateY(-0.5rem);
   }
   li:not(:last-child) {
     margin-right: 3rem;
   }
   a {
-    color: #fff;
+    color: inherit;
   }
   h1 {
-    width: 12.8vw;
+    width: 10vw;
+    height: 100%;
   }
   h1 svg {
   }
