小さな設定の変更

--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -112,11 +112,13 @@ import "../styles/global.css";
     padding: 0.1rem 1rem;
     border-radius: 0.5rem;
     transition: background-color 0.5s;
+
+    &.background {
+      backdrop-filter: blur(2.4rem);
+      background-color: hsla(0, 0%, 0%, 0.1);
+    }
   }
-  header.background {
-    backdrop-filter: blur(2.4rem);
-    background-color: hsla(0, 0%, 0%, 0.1);
-  }
+
   ul {
     display: grid;
     grid-template-columns: subgrid;
@@ -126,17 +128,16 @@ import "../styles/global.css";
   li {
     font-family: "jost", sans-serif;
     font-weight: 500;
+    &:not(:last-child) {
+      margin-right: 3rem;
+    }
   }
-  li:not(:last-child) {
-    margin-right: 3rem;
-  }
+
   a {
     color: inherit;
   }
   h1 {
     width: 10vw;
     height: 100%;
-  }
-  h1 svg {
   }
 </style>
