--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import MainHeader from "../components/MainHeader.astro";
 import Layout from "../layouts/Layout.astro";
 import { Image } from "astro:assets";
-import myImage from "../assets/jean-guy-nakars-nsMSEUHuOEU-unsplash.jpg";
+import myImage from "../assets/jean-guy-nakars-nsMSEUHuOEU-unsplash.webp";
 import Section from "../components/Section.astro";
 ---
 
