Missionセクションの作成

--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -11,7 +11,7 @@
         viewBox="0 0 570 191"
         version="1.1"
         role="img"
-        aria-label="company name Sunshine Solutions"
+        aria-label="Sunshine Solutions"
         xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
         xml:space="preserve"
