--- a/src/layouts/GridLayout.astro
+++ b/src/layouts/GridLayout.astro
@@ -4,10 +4,7 @@
 
 <section id="section" class="section">
   <div class="container">
-    <p>category</p>
-    <p>headline</p>
-    <p>paragraph</p>
-    <p>picture</p>
+    <slot />
   </div>
 </section>
 
@@ -23,6 +20,9 @@
   }
   .container {
     padding: 2.5rem;
-    min-height: 100svh;
+    width: 100%;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(8, minmax(max-content, 1fr));
   }
 </style>
