--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,6 +18,19 @@
   font-weight: 700;
   font-display: swap;
 }
+@font-face {
+  font-family: "shippori mincho";
+  src: url("/sunshine-solutions/fonts/shippori-mincho-v14-japanese-regular.woff2")
+    format("woff2");
+  font-weight: 400;
+  font-display: swap;
+}
+@font-face {
+  font-family: "noto sans";
+  src: url("/sunshine-solutions/fonts/NotoSansJP-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-display: swap;
+}
 
 * {
   margin: 0;
