イメージセクションの作成

--- a/src/components/Mission.astro
+++ b/src/components/Mission.astro
@@ -3,7 +3,7 @@ import GridLayout from "../layouts/GridLayout.astro";
 ---
 
 <GridLayout>
-  <div class="text-wrapper">
+  <div id="mission" class="text-wrapper">
     <p class="category">Our <span class="color">mission</span></p>
     <p class="headline">絶え間なく<br />宇宙を<br />照らし続ける</p>
     <p class="paragraph">
