--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,6 +38,7 @@
   list-style: none;
   box-sizing: border-box;
   text-decoration: none;
+  scroll-behavior: smooth;
 }
 /* a:link {
   color: #000;
