コンポーネント構成の変更

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ import myImage from "../assets/jean-guy-nakars-nsMSEUHuOEU-unsplash.webp";
       Eternal.
     </p>
   </h2>
-  <Image src={myImage} alt="雄大な朝日の景色" class="hero" />
+  <Image src={myImage} alt="雄大な朝日の風景" class="hero" />
 </div>
 
 <style>
