--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Image1 from "../assets/darren-bockman-pN3Z2usSIQw-unsplash.webp";
   <main class="main">
     <Hero />
     <Mission />
-    <ImageSection src={Image1} alt="森に日光が差し込む画像" />
+    <ImageSection src={Image1} alt="森に日光が差し込む風景" />
   </main>
 </Layout>
 
