--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,11 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import "../styles/global.css";
 import Mission from "../components/Mission.astro";
+import Solution from "../components/Solution.astro";
 import ImageSection from "../components/ImageSection.astro";
-import Image1 from "../assets/darren-bockman-pN3Z2usSIQw-unsplash.webp";
+import Image1 from "../assets/darren-bockman-pN3Z2usSIQw-unsplash.avif";
+import Image2 from "../assets/frank-mckenna-OD9EOzfSOh0-unsplash.avif";
+import Image3 from "../assets/john-cameron-jVqW-d6GZ2U-unsplash.avif";
 ---
 
 <Layout title="Sunshine Solutions" description="A conceptual business website">
@@ -14,6 +17,9 @@ import Image1 from "../assets/darren-bockman-pN3Z2usSIQw-unsplash.webp";
     <Hero />
     <Mission />
     <ImageSection src={Image1} alt="森に日光が差し込む風景" />
+    <Solution />
+    <ImageSection src={Image2} alt="海辺の風景" />
+    <ImageSection src={Image3} alt="上空から眺める海の風景" />
   </main>
 </Layout>
 
