--- a/src/components/Mission.astro
+++ b/src/components/Mission.astro
@@ -2,16 +2,23 @@
 import GridWrapper from "./GridWrapper.astro";
 ---
 
-<section>
+<section id="mission">
   <GridWrapper>
-    <div id="mission" class="text-wrapper">
+    <div class="text-wrapper">
       <p class="category">Our <span class="color">mission</span></p>
       <h2 class="headline">絶え間なく<br />宇宙を<br />照らし続ける</h2>
       <p class="paragraph">
-        私たちは太陽系の中心にある存在として、<br />
-        太陽系に不可欠なエネルギーと重力の安定を提供しています。<br />
-        革新的な核融合技術を通じて、生命と惑星の営みを<br />
-        持続可能な方法で支えることが私たちの使命です。<br />
+        <span class="bg-line">私たちは太陽系の中心にある存在として、</span><br
+        />
+        <span class="bg-line"
+          >太陽系に不可欠なエネルギーと重力の安定を提供しています。</span
+        ><br />
+        <span class="bg-line"
+          >革新的な核融合技術を通じて、生命と惑星の営みを</span
+        ><br />
+        <span class="bg-line"
+          >持続可能な方法で支えることが私たちの使命です。</span
+        ><br />
       </p>
     </div>
     <div class="picture-wrapper">
@@ -162,6 +169,7 @@ import GridWrapper from "./GridWrapper.astro";
     flex-direction: column;
     grid-column: 2 / span 3;
     padding-top: 7rem;
+    color: hsl(0, 0%, 25%);
   }
   .category {
     font-size: 2.25rem;
@@ -183,9 +191,10 @@ import GridWrapper from "./GridWrapper.astro";
   .paragraph {
     font-size: 1.25rem;
     font-family: "noto sans", sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 1.9;
     padding-bottom: 9rem;
+    letter-spacing: 0.05rem;
   }
   .picture-wrapper {
     position: absolute;
@@ -195,4 +204,7 @@ import GridWrapper from "./GridWrapper.astro";
     width: 55.5rem;
     z-index: -1;
   }
+  /* .bg-line {
+    background-color: hsl(60, 100%, 98%);
+  } */
 </style>
