partnershipセクションの作成

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import myImage from "../assets/jean-guy-nakars-nsMSEUHuOEU-unsplash.webp";
+import myImage from "../assets/jean-guy-nakars-nsMSEUHuOEU-unsplash.avif";
 ---
 
 <div id="hero" class="container">
