--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -94,7 +94,7 @@
   <ul>
     <li><a href="#mission">Our mission</a></li>
     <li><a href="#solutions">Our solutions</a></li>
-    <li><a href="#history">Our history</a></li>
+    <li><a href="#partnerships">Our partnerships</a></li>
   </ul>
 </header>
 
