--- a/src/components/Solution.astro
+++ b/src/components/Solution.astro
@@ -64,7 +64,7 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
       className="card-position1"
     >
       <div class="card__text-wrapper">
-        <h3 class="card__title">エネルギー効率の高い光合成サポート</h3>
+        <h3 class="card__title">光合成サポート</h3>
         <p class="card__tag">Illumination</p>
         <p class="card__paragraph">
           <span class="card__bg-line"
@@ -87,10 +87,10 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
         <h3 class="card__title">高度な視覚強化</h3>
         <p class="card__tag">Illumination</p>
         <p class="card__paragraph">
-          <span class="card__bg-line">無数の生物種の視覚システムに</span><br />
-          <span class="card__bg-line">最適なスペクトルを提供し、</span><br />
-          <span class="card__bg-line">動物界全体のナビゲーション、狩猟、</span
+          <span class="card__bg-line"
+            >生物の視覚システムに最適なスペクトルを提供し、</span
           ><br />
+          <span class="card__bg-line">動物界全体のナビゲーションや</span><br />
           <span class="card__bg-line"> 社会的相互作用を促進します。</span>
         </p>
       </div></Card
@@ -193,9 +193,8 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
           <span class="card__bg-line"
             >海洋コンベアベルトにエネルギーを与え、
           </span><br />
-          <span class="card__bg-line"
-            >栄養分の分配を促進し、世界中の海洋生態系を支えます。</span
-          >
+          <span class="card__bg-line">栄養分の分配を促進。</span><br />
+          <span class="card__bg-line">世界中の海洋生態系を支えます。</span>
         </p>
       </div></Card
     >
@@ -279,7 +278,7 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
   .number {
     font-size: 2rem;
     font-family: "shippori mincho", serif;
-    font-weight: 500;
+    font-weight: 400;
     margin-bottom: 1rem;
   }
   .headline {
