--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import ImageSection from "../components/ImageSection.astro";
 import Image1 from "../assets/darren-bockman-pN3Z2usSIQw-unsplash.avif";
 import Image2 from "../assets/frank-mckenna-OD9EOzfSOh0-unsplash.avif";
 import Image3 from "../assets/john-cameron-jVqW-d6GZ2U-unsplash.avif";
+import Partnership from "../components/Partnership.astro";
 ---
 
 <Layout title="Sunshine Solutions" description="A conceptual business website">
@@ -19,6 +20,7 @@ import Image3 from "../assets/john-cameron-jVqW-d6GZ2U-unsplash.avif";
     <ImageSection src={Image1} alt="森に日光が差し込む風景" />
     <Solution />
     <ImageSection src={Image2} alt="海辺の風景" />
+    <Partnership />
     <ImageSection src={Image3} alt="上空から眺める海の風景" />
   </main>
 </Layout>
