--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Image1 from "../assets/darren-bockman-pN3Z2usSIQw-unsplash.avif";
 import Image2 from "../assets/frank-mckenna-OD9EOzfSOh0-unsplash.avif";
 import Image3 from "../assets/john-cameron-jVqW-d6GZ2U-unsplash.avif";
 import Partnership from "../components/Partnership.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Sunshine Solutions" description="A conceptual business website">
@@ -23,6 +24,7 @@ import Partnership from "../components/Partnership.astro";
     <Partnership />
     <ImageSection src={Image3} alt="上空から眺める海の風景" />
   </main>
+  <Footer />
 </Layout>
 
 <script>
