--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -13,6 +13,7 @@ const { src, alt, width, height, className } = Astro.props;
     display: grid;
     aspect-ratio: 5 / 6;
     position: relative;
+    align-content: end;
   }
   .card-position1 {
     grid-column: 5 / span 3;
