menuボタンの作成

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -136,6 +136,10 @@ import GridWrapper from "./GridWrapper.astro";
   }
   a {
     color: inherit;
+    transition: color 0.3s;
+  }
+  a:hover {
+    color: hsl(45, 100%, 50%);
   }
   .image-wrapper {
     grid-column: 1 / span 4;
