--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,9 +1,11 @@
 ---
 import { Image } from "astro:assets";
 import myImage from "../assets/jean-guy-nakars-nsMSEUHuOEU-unsplash.avif";
+import Header from "./Header.astro";
 ---
 
 <div id="hero" class="container">
+  <Header />
   <h2>
     <p>
       Constant.<br />
@@ -23,15 +25,17 @@ import myImage from "../assets/jean-guy-nakars-nsMSEUHuOEU-unsplash.avif";
   }
   .hero {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100svh;
     object-fit: cover;
+    z-index: -1;
   }
   h2 {
     position: absolute;
     bottom: 15svh;
     left: 12vw;
-    z-index: 10;
   }
   p {
     color: hsl(240, 100%, 97%);
