--- a/src/components/Mission.astro
+++ b/src/components/Mission.astro
@@ -195,6 +195,7 @@ import GridWrapper from "./GridWrapper.astro";
     line-height: 1.9;
     padding-bottom: 9rem;
     letter-spacing: 0.05rem;
+    word-break: keep-all;
   }
   .picture-wrapper {
     position: absolute;
