--- a/src/components/Solution.astro
+++ b/src/components/Solution.astro
@@ -317,6 +317,7 @@ import CardImage8 from "../assets/hector-ramon-perez-sjAtGCs6VXs-unsplash.avif";
     background-color: hsl(60, 100%, 98%);
     padding: 0 0.3rem;
     border-radius: 0.3rem;
+    word-break: keep-all;
   }
   .card__tag {
     color: hsl(0, 0%, 20%);
