--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import MainHeader from "../components/MainHeader.astro";
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import "../styles/global.css";
@@ -11,10 +10,11 @@ import Image2 from "../assets/frank-mckenna-OD9EOzfSOh0-unsplash.avif";
 import Image3 from "../assets/john-cameron-jVqW-d6GZ2U-unsplash.avif";
 import Partnership from "../components/Partnership.astro";
 import Footer from "../components/Footer.astro";
+import ButtonMenu from "../components/ButtonMenu.astro";
 ---
 
 <Layout title="Sunshine Solutions" description="A conceptual business website">
-  <MainHeader />
+  <ButtonMenu />
   <main class="main">
     <Hero />
     <Mission />
@@ -29,7 +29,7 @@ import Footer from "../components/Footer.astro";
 
 <script>
   document.addEventListener("DOMContentLoaded", () => {
-    const header = document.getElementById("header");
+    const menu = document.getElementById("menu");
     const hero = document.getElementById("hero");
 
     const observerOptions = {
@@ -41,11 +41,11 @@ import Footer from "../components/Footer.astro";
     const observerCallback = (entries) => {
       entries.forEach((entry) => {
         if (entry.isIntersecting) {
-          header.classList.remove("background");
+          menu.classList.remove("visible");
           return;
         }
         if (!entry.isIntersecting) {
-          header.classList.add("background");
+          menu.classList.add("visible");
           return;
         }
       });
