Loadingコンポーネントの作成

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,11 @@ import Image3 from "../assets/john-cameron-jVqW-d6GZ2U-unsplash.avif";
 import Partnership from "../components/Partnership.astro";
 import Footer from "../components/Footer.astro";
 import ButtonMenu from "../components/ButtonMenu.astro";
+import Loading from "../components/Loading.astro";
 ---
 
 <Layout title="Sunshine Solutions" description="A conceptual business website">
+  <Loading />
   <ButtonMenu />
   <main class="main">
     <Hero />
